src/frontend/homepage/app/styles/main.scss
/**
 * Main styles.
 *
 * Based on Web Starter Kit. Multi-screen layout styles for your page. Brought
 * to you by the Web Starter Kit team.
 *
 **/

@import '_h5bp';
@import 'components/components';


.ui-mask-modal {
  background-color: rgba(0,0,0,0.5);
  height: 100%;
  left: 0;
  opacity: 0.1;
  top: 0;
  visibility: hidden;
  width: 100%;
  z-index: 3;
  position: fixed;
  transition: visibility $transitionDuration ease,
              opacity $transitionDuration $transitionFunction;
  will-change: opacity, visibility;

  &.ui-mask-visible {
    opacity: 1;
    visibility: visible;
    transition-delay: 0;
  }
}

.topbar {
  flex: 0 0 auto;
  background-color: $backgroundColor;
  z-index: 1;
}

.menu {
  top: 0;
  left: 0;
  display: inline-block;
  width: 60px;
  height: 60px;
  padding: 0;
  background-image: none;
  background-color: transparent;
  border: none;
  border-radius: 50%;
  transition: background-color $transitionDuration $transitionFunction;
  -webkit-tap-highlight-color: transparent;

  svg {
    width: 24px;
    height: 24px;
    fill: white;
  }

  &:hover {
    background-color: rgba(255, 255, 255, 0.1);
  }

  &:focus {
    background-color: rgba(255, 255, 255, 0.2);
    outline: 0;
  }

  &:active {
    background-color: rgba(255, 255, 255, 0.4);
  }
}

.nav {
  top: 0;
  bottom: 0;
  width: 250px;
  height: 100%;
  position: fixed;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  background-color: white;
  overflow-y: auto;
  z-index: 4;
  visibility: hidden;
  transform: translate(-250px, 0);
  transition: transform $transitionDuration $transitionFunction;
  will-change: transform, visibility;

  &::before {
    content: ' ';
    background-color: $backgroundColor;
    height: 130px;
  }

  &.open {
    transform: translate(0, 0);
  }

  &.opened {
    visibility: visible;
  }

  ul {
    padding: 0;
    margin: 0;
    list-style-type: none;

    li {
      border-bottom-style: solid;
      border-width: 1px;
      border-color: white;
      padding: 0;

      &::before {
        content: none;
      }

      a {
        display: block;
        text-decoration: none;
        color: $colorText;
        font-size: 14px;
        font-weight: bold;
        white-space: nowrap;
        height: 60px;
        padding: 17px 20px;
        line-height: 1.4;
        transition: background-color $transitionDuration $transitionFunction;
        -webkit-tap-highlight-color: transparent;

        &:hover {
          background-color: rgba(255, 255, 255, 0.2);
          color: rgba(0,0,0,0.9);
        }

        &:focus {
          background-color: rgba(255, 255, 255, 0.3);
          outline: 0;
        }

        &:active {
          background-color: rgba(255, 255, 255, 0.4);
        }
      }
    }
  }
}

.header,
.footer {
  flex: 1 0 auto;
}

.header {
  background-color: $backgroundColor;
  z-index: 1;
}

/** Larger Screens - desktops and tablets **/
@include wide {
  .menu {
    display: none;
  }

  .nav {
    position: relative;
    width: 100%;
    height: auto;
    flex-direction: row;
    justify-content: flex-end;
    background-color: $backgroundColor;
    visibility: visible;
    transform: translate(0, 0);
    transition: none;

    ul {
      display: flex;
      height: 100%;

      li {
        border: none;

        a {
          color: white;
        }

        a:hover {
          color: rgba(255,255,255,0.8);
        }
      }
    }
  }
}

/* roboto-300 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 300;
  src: url('../fonts/roboto-v15-latin-300.eot'); /* IE9 Compat Modes */
  src: local('Roboto Light'), local('Roboto-Light'),
       url('../fonts/roboto-v15-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/roboto-v15-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/roboto-v15-latin-300.woff') format('woff'), /* Modern Browsers */
       url('../fonts/roboto-v15-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/roboto-v15-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
}
/* roboto-regular - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/roboto-v15-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Roboto'), local('Roboto-Regular'),
       url('../fonts/roboto-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/roboto-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/roboto-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../fonts/roboto-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/roboto-v15-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
}
/* roboto-500 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  src: url('../fonts/roboto-v15-latin-500.eot'); /* IE9 Compat Modes */
  src: local('Roboto Medium'), local('Roboto-Medium'),
       url('../fonts/roboto-v15-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/roboto-v15-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/roboto-v15-latin-500.woff') format('woff'), /* Modern Browsers */
       url('../fonts/roboto-v15-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/roboto-v15-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
}
/* roboto-700 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/roboto-v15-latin-700.eot'); /* IE9 Compat Modes */
  src: local('Roboto Bold'), local('Roboto-Bold'),
       url('../fonts/roboto-v15-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/roboto-v15-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/roboto-v15-latin-700.woff') format('woff'), /* Modern Browsers */
       url('../fonts/roboto-v15-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/roboto-v15-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
}

/* droid-serif-regular - latin */
@font-face {
  font-family: 'Droid Serif';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/droid-serif-v6-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Droid Serif'), local('DroidSerif'),
       url('../fonts/droid-serif-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/droid-serif-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/droid-serif-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../fonts/droid-serif-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/droid-serif-v6-latin-regular.svg#DroidSerif') format('svg'); /* Legacy iOS */
}
/* droid-serif-700 - latin */
@font-face {
  font-family: 'Droid Serif';
  font-style: normal;
  font-weight: 700;
  src: url('../fonts/droid-serif-v6-latin-700.eot'); /* IE9 Compat Modes */
  src: local('Droid Serif Bold'), local('DroidSerif-Bold'),
       url('../fonts/droid-serif-v6-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/droid-serif-v6-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/droid-serif-v6-latin-700.woff') format('woff'), /* Modern Browsers */
       url('../fonts/droid-serif-v6-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/droid-serif-v6-latin-700.svg#DroidSerif') format('svg'); /* Legacy iOS */
}

@import '_syntax';
@import '_index';
@import '_page';

